--- a/index.html
+++ b/index.html
@@ -340,25 +340,25 @@ https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css
                   <li class="icon-media-round">
                     <a href="#"></a>
                     <svg class="main-team-media-items">
-                      <use href="./images/icons.svg#icon-Ellipse"></use>
+                      <use href="./images/icons.svg#icon-instagram-2"></use>
                     </svg>
                   </li>
                   <li class="icon-media-round">
                     <a href="#"></a>
                     <svg class="main-team-media-items">
-                      <use href="./images/icons.svg#icon-Ellipse-7"></use>
+                      <use href="./images/icons.svg#icon-twitter-1"></use>
                     </svg>
                   </li>
                   <li class="icon-media-round">
                     <a href="#"></a>
                     <svg class="main-team-media-items">
-                      <use href="./images/icons.svg#icon-Ellipse-1"></use>
+                      <use href="./images/icons.svg#icon-facebook-1"></use>
                     </svg>
                   </li>
                   <li class="icon-media-round">
                     <a href="#"></a>
                     <svg class="main-team-media-items">
-                      <use href="./images/icons.svg#icon-Ellipse-2"></use>
+                      <use href="./images/icons.svg#icon-linkedin-1"></use>
                     </svg>
                   </li>
                 </ul>
@@ -379,25 +379,25 @@ https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css
                   <li class="icon-media-round">
                     <a href="#"></a>
                     <svg class="main-team-media-items">
-                      <use href="./images/icons.svg#icon-Ellipse"></use>
+                      <use href="./images/icons.svg#icon-instagram-2"></use>
                     </svg>
                   </li>
                   <li class="icon-media-round">
                     <a href="#"></a>
                     <svg class="main-team-media-items">
-                      <use href="./images/icons.svg#icon-Ellipse-7"></use>
+                      <use href="./images/icons.svg#icon-twitter-1"></use>
                     </svg>
                   </li>
                   <li class="icon-media-round">
                     <a href="#"></a>
                     <svg class="main-team-media-items">
-                      <use href="./images/icons.svg#icon-Ellipse-1"></use>
+                      <use href="./images/icons.svg#icon-facebook-1"></use>
                     </svg>
                   </li>
                   <li class="icon-media-round">
                     <a href="#"></a>
                     <svg class="main-team-media-items">
-                      <use href="./images/icons.svg#icon-Ellipse-2"></use>
+                      <use href="./images/icons.svg#icon-linkedin-1"></use>
                     </svg>
                   </li>
                 </ul>
@@ -418,25 +418,25 @@ https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css
                   <li class="icon-media-round">
                     <a href="#"></a>
                     <svg class="main-team-media-items">
-                      <use href="./images/icons.svg#icon-Ellipse"></use>
+                      <use href="./images/icons.svg#icon-instagram-2"></use>
                     </svg>
                   </li>
                   <li class="icon-media-round">
                     <a href="#"></a>
                     <svg class="main-team-media-items">
-                      <use href="./images/icons.svg#icon-Ellipse-7"></use>
+                      <use href="./images/icons.svg#icon-twitter-1"></use>
                     </svg>
                   </li>
                   <li class="icon-media-round">
                     <a href="#"></a>
                     <svg class="main-team-media-items">
-                      <use href="./images/icons.svg#icon-Ellipse-1"></use>
+                      <use href="./images/icons.svg#icon-facebook-1"></use>
                     </svg>
                   </li>
                   <li class="icon-media-round">
                     <a href="#"></a>
                     <svg class="main-team-media-items">
-                      <use href="./images/icons.svg#icon-Ellipse-2"></use>
+                      <use href="./images/icons.svg#icon-linkedin-1"></use>
                     </svg>
                   </li>
                 </ul>
@@ -457,25 +457,25 @@ https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css
                   <li class="icon-media-round">
                     <a href="#"></a>
                     <svg class="main-team-media-items">
-                      <use href="./images/icons.svg#icon-Ellipse"></use>
+                      <use href="./images/icons.svg#icon-instagram-2"></use>
                     </svg>
                   </li>
                   <li class="icon-media-round">
                     <a href="#"></a>
                     <svg class="main-team-media-items">
-                      <use href="./images/icons.svg#icon-Ellipse-7"></use>
+                      <use href="./images/icons.svg#icon-twitter-1"></use>
                     </svg>
                   </li>
                   <li class="icon-media-round">
                     <a href="#"></a>
                     <svg class="main-team-media-items">
-                      <use href="./images/icons.svg#icon-Ellipse-1"></use>
+                      <use href="./images/icons.svg#icon-facebook-1"></use>
                     </svg>
                   </li>
                   <li class="icon-media-round">
                     <a href="#"></a>
                     <svg class="main-team-media-items">
-                      <use href="./images/icons.svg#icon-Ellipse-2"></use>
+                      <use href="./images/icons.svg#icon-linkedin-1"></use>
                     </svg>
                   </li>
                 </ul>
@@ -538,28 +538,28 @@ https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css
             <li>
               <a class="icon-media-round-footer" href="#0">
                 <svg class="footer-media-items">
-                  <use href="./images/icons.svg#icon-Ellipse-3"></use>
+                  <use href="./images/icons.svg#icon-instagram-2"></use>
                 </svg>
               </a>
             </li>
             <li>
               <a class="icon-media-round-footer" href="#0">
                 <svg class="footer-media-items">
-                  <use href="./images/icons.svg#icon-Ellipse-4"></use>
+                  <use href="./images/icons.svg#icon-twitter-1"></use>
                 </svg>
               </a>
             </li>
             <li>
               <a class="icon-media-round-footer" href="#0">
                 <svg class="footer-media-items">
-                  <use href="./images/icons.svg#icon-Ellipse-5"></use>
+                  <use href="./images/icons.svg#icon-facebook-1"></use>
                 </svg>
               </a>
             </li>
             <li>
               <a class="icon-media-round-footer" href="#0">
                 <svg class="footer-media-items">
-                  <use href="./images/icons.svg#icon-Ellipse-6"></use>
+                  <use href="./images/icons.svg#icon-linkedin-1"></use>
                 </svg>
               </a>
             </li>
